--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,16 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:0.9.+'
+        classpath 'com.github.dcendents:android-maven-plugin:1.0'
     }
 }
 
 apply plugin: 'android-library'
+apply plugin: 'android-maven'
+
+version = "1.0.0"
+group = "com.android"
+archivesBaseName = "volley"
 
 android {
     compileSdkVersion 19
